# foobar

./: .gitignore  db.sqlite3  pyproject.toml
foobar/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
foobar/migrations/: 0001_initial.py  0002_note_date.py
foobar/templates/: index.html
